--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integracao Contínua</li>
+        <li>Integracao Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul> 
 </body>
 </html>
