Revert "Mudando nome do curso de Ansible"
This reverts commit a3d46a3548c1502ae38fd0ab9a8276f24114cdb0.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker : Criando containers sem dor de cabeça</li>
-        <li>Ansible: Infraestrutura como código</li>
+        <li>Ansible</li>
         <li>Integracao Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul> 
 </body>
