--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Docker : Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Integracao Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul> 
 </body>
 </html>
